# foodie

./: Cargo.toml  Dioxus.toml  LICENSE  README.md  build.rs  netlify.toml
.github/workflows/: deploy.yml
assets/: style.css
data/recipes/: _template.json  chicken-rendang.json  chilli-con-carne.json  glaswegian-lasagne.json  index.json
src/: embedded_recipes.json  main.rs
src/components/: header.rs  mod.rs  recipe_list.rs  recipe_modal.rs  search_bar.rs
src/models/: recipe.rs
src/services/: mod.rs  recipe_service.rs
